# moauth

./: .gitignore  CHANGES.md  CONTRIBUTING.md  DOCUMENTATION.md  Makedefs.in  Makefile  NOTICE  README.md  SECURITY.md  config.h.in  configure  configure.ac  makesrcdist  moauth.opacity  test.conf
.github/workflows/: build.yml  coverity.yml
moauth/: Makefile  authorize.c  connect.c  form.c  json.c  libmoauth-body.md  libmoauth.3  libmoauth.html  moauth-private.h  moauth.h  post.c  random.c  register.c  testmoauth.c  token.c
moauthd/: Makefile  auth.c  client.c  conf.c  index-md.h  index.md  log.c  main.c  mmd.c  moauth-png.h  moauthd.8  moauthd.conf.5  moauthd.conf.default  moauthd.h  resource.c  server.c  style-css.h  style.css  testmoauthd.c  token.c  web.c
snap/: snapcraft.yaml
specs/: draft-ietf-oauth-device-flow-07.txt  draft-ietf-oauth-v2-1-06.txt
test/: index.md
test/private/: index.md
test/shared/: index.md
xcode/: config.h
xcode/mOAuth.xcodeproj/: project.pbxproj
xcode/mOAuth.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/mOAuth.xcworkspace/: contents.xcworkspacedata
